--- a/_includes/block-footer-1.html
+++ b/_includes/block-footer-1.html
@@ -66,7 +66,7 @@
           </div>
 
           <div class="col-md-3 col-lg-4 order-0 order-md-2 mb-5 mb-md-0">
-            <h3 class="headline-small">Join us at the Wunder Bar<br/><span class="text-mute text-muted">Subscribe to our newsletter today</span></h3>
+            <h3 class="headline-small">Mobility news you can use<br/><span class="text-mute text-muted">Subscribe to our newsletter today</span></h3>
             <div id="mc_embed_signup">
               <form action="https://wunder.us3.list-manage.com/subscribe/post?u=c6ee53e24cd30c208f1a610b1&amp;id=0ba0a2cc79" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate="">
                 <div class="input-group my-3">
