--- a/_includes/block-contact-form.html
+++ b/_includes/block-contact-form.html
@@ -86,6 +86,7 @@
                   <option value="Wunder Vehicles" data-id="vehicles" {% if page.lang-ref == 'vehicles' or page.lang-ref == 'vehicles-yadea' %}selected{% endif %}>Wunder Vehicles</option>
                   <option value="General enquiry" data-id="general" {% if page.lang-ref == 'home' %}selected{% endif %}>General enquiry</option>
                   <option value="Press" data-id="press" {% if page.lang-ref == 'press' %}selected{% endif %}>Press</option>
+                  <option value="Podcast" data-id="podcast" {% if page.lang-ref == 'podcast' %}selected{% endif %}>Podcast</option>
                 </select>
                 <div class="bottom-border"></div>
               </div>
