--- a/_layouts/simple-article.html
+++ b/_layouts/simple-article.html
@@ -63,7 +63,7 @@
           </div>
         </div>
         {% if page.include_case_study == true%}
-        <div class="row align-items-center">
+        <div class="row align-items-center bg-grey p-4">
           <div class="col-sm-5 text-center text-sm-left pt-5 py-sm-5 my-sm-5">
             <h2 class="headline-large">{{ page.case_study_cta.heading }}</h2>
             <a class="btn btn-outline-dark mt-4" data-toggle="modal" data-target="#downloadModal" href="{{ page.case_study_cta.external_url | downcase }}" title="View the case study on {{ page.title }} working with Wunder Mobility.">{{ page.case_study_cta.cta_text | default: "Learn more" }}</a>
