added up to date episodes

--- a/_includes/static/block-podcast-main.html
+++ b/_includes/static/block-podcast-main.html
@@ -29,7 +29,7 @@
             target="_blank"
             data-aos="fade-in"
             data-aos-easing="apple-easing"
-            >Listen now</a
+            >Follow along</a
           >
         </div>
       </div>
