added mobile apply button

--- a/_includes/static/block-summit-main.html
+++ b/_includes/static/block-summit-main.html
@@ -1,4 +1,18 @@
 <main id="wms2021-main">
+  <section id="apply" class="bg-black fixed-bottom m-0">
+    <div class="container-fluid px-5 py-3">
+      <div class="row align-items-center justify-content-between">
+        <p class="mr-2 mb-0">Apply for exclusive WMS'21 tickets</p>
+        <button
+          class="btn btn-outline-light"
+          data-target="#wmsModal"
+          data-toggle="modal"
+        >
+          Apply to attend
+        </button>
+      </div>
+    </div>
+  </section>
   <section id="countdown" class="bg-black sticky-top">
     <div class="container-fluid px-5">
       <div class="row align-items-center">
@@ -35,7 +49,7 @@
         <div class="col justify-content-center">
           <a href="#dates" class="d-block mx-auto"
             ><img
-              src="uploads/global/wms2021/arrow-down.svg"
+              src="/uploads/global/wms2021/arrow-down.svg"
               alt=""
               class="mx-auto d-block"
           /></a>
@@ -179,21 +193,20 @@
           <p class="mb-5">
             With a hand-selected group of industry experts and thought leaders,
             we want to foster connection and conversation above all else. Be
-            prepared for a thought- provoking, participation-driven program
+            prepared for a thought-provoking, participation-driven program
             packed with insightful discussions, networking, workshops, test
             drives, and fantastic food, drinks, and entertainment.
           </p>
         </div>
-        <div class="offset-lg-6 col-md-6 pl-5 border-left">
+        <div class="offset-lg-6 pl-5 border-left">
           <h4 class="headline-medium font-weight-bold">Dinner & Party</h4>
           <p class="font-weight-bold">5.30 PM Until Late: The Grand Finale</p>
           <p class="mb-3">
-            WMS isn’t just about listening and learning, it’s also about
-            engaging with others. Is there a better way to end a day of
-            thought-provoking activity than to sit down and dine with newly
-            formed connections? Get a chance to reflect over fine dining and
-            cocktails - or dance the night away at our closing party in the
-            museum's historical vaults.
+            WMS'21 isn’t just about listening and learning, it’s also about
+            engaging with others. Is there a better way to end a day of activity
+            than to sit down and dine with newly formed connections? Get a
+            chance to reflect over fine dining and cocktails - or dance the
+            night away at our closing party.
           </p>
         </div>
       </div>
@@ -225,8 +238,7 @@
             <h4 class="headline-medium">Tech Playground</h4>
             <hr />
             <p class="mb-4">
-              inspirational speakers share their knowledge in lively panel
-              discussions
+              Guests can play around with and be inspired by new technology.
             </p>
             <div
               class="img-container"
@@ -241,13 +253,13 @@
             <h4 class="headline-medium">Test Drive</h4>
             <hr />
             <p class="mb-4">
-              inspirational speakers share their knowledge in lively panel
-              discussions
+              Guests have the chance to test out all types of new mobility
+              firsthand.
             </p>
             <div
               class="img-container"
               style="
-                background-image: url('/uploads/global/wms2021/agenda/tech_playground.png');
+                background-image: url('/uploads/global/wms2021/agenda/test_drive.png');
               "
             ></div>
           </div>
@@ -257,8 +269,8 @@
             <h4 class="headline-medium">Active Matchmaking</h4>
             <hr />
             <p class="mb-4">
-              inspirational speakers share their knowledge in lively panel
-              discussions
+              We facilitate 1:1 meetings between guests who want to meet each
+              other.
             </p>
             <div
               class="img-container"
@@ -270,16 +282,15 @@
         </div>
         <div class="col-lg-4 col-sm-6 mb-5 agenda-container">
           <div class="h-100 p-4 border">
-            <h4 class="headline-medium">Network & Conferencing</h4>
+            <h4 class="headline-medium">Networking & Party</h4>
             <hr />
             <p class="mb-4">
-              inspirational speakers share their knowledge in lively panel
-              discussions
+              A collaborative, memorable environment and networking breaks.
             </p>
             <div
               class="img-container"
               style="
-                background-image: url('/uploads/global/wms2021/agenda/conference.png');
+                background-image: url('/uploads/global/wms2021/agenda/network.png');
               "
             ></div>
           </div>
@@ -335,7 +346,7 @@
         </div>
         <div class="col-md-4 mb-5">
           <img
-            src="uploads/global/wms2021/pwc.png"
+            src="uploads/global/wms2021/sponsors/pwc_logo.png"
             alt=""
             class="mb-5 mx-auto d-block"
           />
@@ -347,21 +358,28 @@
         </div>
         <div class="col-md-4">
           <img
-            src="uploads/global/wms2021/background_logo.png"
+            src="uploads/global/wms2021/sponsors/background_logo.png"
             class="mx-auto d-block"
             alt=""
           />
         </div>
         <div class="col-md-4">
           <img
-            src="uploads/global/wms2021/automobil_logo.png"
+            src="uploads/global/wms2021/sponsors/automobil_logo.png"
             class="mx-auto d-block"
             alt=""
           />
         </div>
         <div class="col-md-4">
           <img
-            src="uploads/global/wms2021/next_mobility_logo.png"
+            src="uploads/global/wms2021/sponsors/next_mobility_logo.png"
+            class="mx-auto d-block"
+            alt=""
+          />
+        </div>
+        <div class="col-md-4">
+          <img
+            src="uploads/global/wms2021/sponsors/intellicarde_logo.png"
             class="mx-auto d-block"
             alt=""
           />
@@ -426,44 +444,42 @@
       <div class="row">
         <div class="col-md-3">
           <img
-            src="/uploads/global/wms2021/wms19/car.png"
+            data-src="/uploads/global/wms2021/wms19/car.png"
+            data-srcset="/uploads/global/wms2021/wms19/car@2x.png 2x"
+            alt=""
+            class="w-100"
+          />
+          <img
+            data-src="/uploads/global/wms2021/wms19/crowd.png"
+            data-srcset="/uploads/global/wms2021/wms19/crowd@2x.png 2x"
             alt=""
             class="w-100"
           />
         </div>
         <div class="col-md-3">
           <img
-            src="/uploads/global/wms2021/wms19/buggy.png"
+            data-src="/uploads/global/wms2021/wms19/buggy.png"
+            data-srcset="/uploads/global/wms2021/wms19/buggy@2x.png 2x"
+            alt=""
+            class="w-100"
+          />
+          <img
+            data-src="/uploads/global/wms2021/wms19/dj.png"
+            data-srcset="/uploads/global/wms2021/wms19/dj@2x.png 2x"
             alt=""
             class="w-100"
           />
         </div>
         <div class="col-md-6">
           <img
-            src="/uploads/global/wms2021/wms19/forum.png"
+            data-src="/uploads/global/wms2021/wms19/forum.png"
+            data-srcset="/uploads/global/wms2021/wms19/forum@2x.png 2x"
             alt=""
             class="w-100"
           />
-        </div>
-      </div>
-      <div class="row mb-5">
-        <div class="col-md-3">
           <img
-            src="/uploads/global/wms2021/wms19/crowd.png"
-            alt=""
-            class="w-100"
-          />
-        </div>
-        <div class="col-md-3">
-          <img
-            src="/uploads/global/wms2021/wms19/dj.png"
-            alt=""
-            class="w-100"
-          />
-        </div>
-        <div class="col-md-6">
-          <img
-            src="/uploads/global/wms2021/wms19/mixer.png"
+            data-src="/uploads/global/wms2021/wms19/mixer.png"
+            data-srcset="/uploads/global/wms2021/wms19/mixer@2x.png 2x"
             alt=""
             class="w-100"
           />
@@ -475,19 +491,19 @@
         </div>
       </div>
       <div class="row mb-5 py-5 border-bottom text-white text-center">
-        <div class="col-3">
+        <div class="col-md-3 col-6 mb-5">
           <h4 class="headline-medium mb-2">46%</h4>
           <p>C-Level</p>
         </div>
-        <div class="col-3">
+        <div class="col-md-3 col-6">
           <h4 class="headline-medium mb-2">25%</h4>
           <p>Startup Founders</p>
         </div>
-        <div class="col-3">
+        <div class="col-md-3 col-6">
           <h4 class="headline-medium mb-2">7%</h4>
           <p>Investors</p>
         </div>
-        <div class="col-3">
+        <div class="col-md-3 col-6">
           <h4 class="headline-medium mb-2">22%</h4>
           <p>Mobility Experts</p>
         </div>
@@ -524,44 +540,46 @@
       </div>
       <div class="row">
         <div class="col-12">
+          {% for faq in page.faqs %}
           <div id="accordion">
             <div class="card">
-              <div class="card-header" id="headingOne">
+              <div class="card-header" id="heading{{ forloop.index }}">
                 <h5 class="mb-0">
                   <button
-                    class="btn btn-link"
+                    class="
+                      btn btn-link
+                      d-flex
+                      align-items-center
+                      justify-content-between
+                    "
                     data-toggle="collapse"
-                    data-target="#collapseOne"
+                    data-target="#collapse{{ forloop.index }}"
+                    {% if forloop.index == 1 %}
                     aria-expanded="true"
-                    aria-controls="collapseOne"
+                    {% endif %}
+                    aria-controls="collapse{{ forloop.index }}"
                   >
-                    Who should attend WMS’21?
+                    <span>{{ faq.question }}</span>
+                    <img
+                      src="uploads/global/wms2021/arrow-down.svg"
+                      alt=""
+                      class="h-100"
+                    />
                   </button>
                 </h5>
               </div>
 
               <div
-                id="collapseOne"
-                class="collapse show"
-                aria-labelledby="headingOne"
+                id="collapse{{ forloop.index }}"
+                class="collapse {% if forloop.index == 1 %}show{% endif %}"
+                aria-labelledby="heading{{ forloop.index }}"
                 data-parent="#accordion"
               >
-                <div class="card-body">
-                  Anim pariatur cliche reprehenderit, enim eiusmod high life
-                  accusamus terry richardson ad squid. 3 wolf moon officia aute,
-                  non cupidatat skateboard dolor brunch. Food truck quinoa
-                  nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt
-                  aliqua put a bird on it squid single-origin coffee nulla
-                  assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft
-                  beer labore wes anderson cred nesciunt sapiente ea proident.
-                  Ad vegan excepteur butcher vice lomo. Leggings occaecat craft
-                  beer farm-to-table, raw denim aesthetic synth nesciunt you
-                  probably haven't heard of them accusamus labore sustainable
-                  VHS.
-                </div>
+                <div class="card-body">{{ faq.answer }}</div>
               </div>
             </div>
           </div>
+          {% endfor %}
         </div>
       </div>
       <div class="row"></div>
@@ -580,7 +598,7 @@
             class="btn btn-dark mb-5 mb-md-0"
             data-aos="fade-in"
             data-aos-easing="apple-easing"
-            >Follow Along</a
+            >Tune in</a
           >
         </div>
         <div class="col-md-6 offset-md-1">
@@ -704,15 +722,15 @@
       (distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60)
     );
     var minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
-    var seconds = Math.floor((distance % (1000 * 60)) / 1000);
 
     document.getElementById("timer").innerHTML =
+      "<strong>" +
       days +
-      " days " +
+      "</strong> days <strong>" +
       hours +
-      " hours " +
+      "</strong> hours <strong>" +
       minutes +
-      " minutes until WMS2'21 🎉";
+      "</strong> minutes until <strong>WMS'21</strong> 🎉";
 
     // If the count down is finished, write some text
     if (distance < 0) {
