--- a/_includes/static/block-summit-main.html
+++ b/_includes/static/block-summit-main.html
@@ -60,7 +60,8 @@
   <section id="dates">
     <div class="container">
       <div class="row">
-        <div class="col">
+        <div class="col" data-aos="fade-in"
+        data-aos-easing="apple-easing">
           <img
             src="uploads/global/wms2021/WMS21_Logo.gif"
             alt=""
@@ -70,17 +71,21 @@
       </div>
       <div class="row align-items-center my-5 pb-5 text-white">
         <div class="col">
-          <p class="text-center">jointly presented by</p>
+          <p class="text-center" data-aos="fade-in"
+          data-aos-easing="apple-easing">jointly presented by</p>
           <img
             src="uploads/global/wms2021/wunder-wef.png"
             alt=""
             class="d-block mx-auto"
+            data-aos="fade-in"
+            data-aos-easing="apple-easing"
           />
         </div>
       </div>
       <div class="row pt-5 mt-5 text-white">
         <div class="col-12">
-          <p class="my-5 text-center">
+          <p class="my-5 text-center" data-aos="fade-in"
+          data-aos-easing="apple-easing">
             The Wunder Mobility Summit 2021 is where industry experts, thought
             leaders, and policymakers come together to set the course for the
             future of new mobility. Already in its third edition, this event
@@ -91,15 +96,18 @@
         </div>
       </div>
       <div class="row text-white text-center justify-content-center">
-        <div class="col-md-4">
+        <div class="col-md-4" data-aos="fade-in"
+        data-aos-easing="apple-easing">
           <h4 class="headline-medium">350</h4>
           <p>selected attendees</p>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-4" data-aos="fade-in"
+        data-aos-easing="apple-easing">
           <h4 class="headline-medium">30</h4>
           <p>speakers</p>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-4" data-aos="fade-in"
+        data-aos-easing="apple-easing">
           <h4 class="headline-medium">1</h4>
           <p>iconic venue</p>
         </div>
@@ -108,10 +116,12 @@
   </section>
   <section id="speakers">
     <div class="container">
-      <h2 class="headline-medium mb-5">Our 2021 Panelists & Speakers</h2>
+      <h2 class="headline-medium mb-5" data-aos="fade-in"
+      data-aos-easing="apple-easing">Our 2021 Panelists & Speakers</h2>
       <div class="row">
         {% for speaker in page.speakers %}
-        <div class="col-md-3 col-sm-6 pb-3">
+        <div class="col-md-3 col-sm-6 pb-3" data-aos="fade-in"
+        data-aos-easing="apple-easing">
           <div class="speaker-container p-3 h-100">
             <div class="d-flex flex-column">
               <p class="headline-small font-weight-bold">{{ speaker.name }}</p>
@@ -133,13 +143,15 @@
     <div class="container">
       <div class="row text-white">
         <div class="col-lg-4 pt-3">
-          <h2>
+          <h2 data-aos="fade-in"
+          data-aos-easing="apple-easing">
             Exclusive <br />
             Vibrant <br />
             Inspiring
           </h2>
         </div>
-        <div class="col-lg-2 pt-3">
+        <div class="col-lg-2 pt-3" data-aos="fade-in"
+        data-aos-easing="apple-easing">
           <h4 class="headline-medium font-weight-light">
             11.10.<svg
               class="ml-3"
@@ -159,9 +171,12 @@
           </h4>
         </div>
         <div class="col-lg-6 border-left pl-5 pt-3">
-          <h4 class="headline-medium font-weight-bold">Kick-Off</h4>
-          <p class="font-weight-bold">8.00 PM: Mix & Mingle</p>
-          <p class="mb-5">
+          <h4 class="headline-medium font-weight-bold" data-aos="fade-in"
+          data-aos-easing="apple-easing">Kick-Off</h4>
+          <p class="font-weight-bold" data-aos="fade-in"
+          data-aos-easing="apple-easing">8.00 PM: Mix & Mingle</p>
+          <p class="mb-5" data-aos="fade-in"
+          data-aos-easing="apple-easing">
             Since there hasn’t been much in-person networking in the last two
             years, we’ll start off easy. Arrive in town the night before Summit
             Day for an exclusive kick-off party and get to know fellow WMS
@@ -169,7 +184,8 @@
           </p>
         </div>
         <div class="col-lg-2 offset-lg-4">
-          <h4 class="headline-medium font-weight-light">
+          <h4 class="headline-medium font-weight-light" data-aos="fade-in"
+          data-aos-easing="apple-easing">
             12.10.<svg
               class="ml-3"
               width="31"
@@ -188,9 +204,12 @@
           </h4>
         </div>
         <div class="col-lg-6 border-left pl-5">
-          <h4 class="headline-medium font-weight-bold">Summit Day</h4>
-          <p class="font-weight-bold">9.00 AM: Let’s Get Started</p>
-          <p class="mb-5">
+          <h4 class="headline-medium font-weight-bold" data-aos="fade-in"
+          data-aos-easing="apple-easing">Summit Day</h4>
+          <p class="font-weight-bold" data-aos="fade-in"
+          data-aos-easing="apple-easing">9.00 AM: Let’s Get Started</p>
+          <p class="mb-5" data-aos="fade-in"
+          data-aos-easing="apple-easing">
             With a hand-selected group of industry experts and thought leaders,
             we want to foster connection and conversation above all else. Be
             prepared for a thought-provoking, participation-driven program
@@ -199,9 +218,12 @@
           </p>
         </div>
         <div class="offset-lg-6 pl-5 border-left">
-          <h4 class="headline-medium font-weight-bold">Dinner & Party</h4>
-          <p class="font-weight-bold">5.30 PM Until Late: The Grand Finale</p>
-          <p class="mb-3">
+          <h4 class="headline-medium font-weight-bold" data-aos="fade-in"
+          data-aos-easing="apple-easing">Dinner & Party</h4>
+          <p class="font-weight-bold" data-aos="fade-in"
+          data-aos-easing="apple-easing">5.30 PM Until Late: The Grand Finale</p>
+          <p class="mb-3" data-aos="fade-in"
+          data-aos-easing="apple-easing">
             WMS'21 isn’t just about listening and learning, it’s also about
             engaging with others. Is there a better way to end a day of activity
             than to sit down and dine with newly formed connections? Get a
@@ -215,9 +237,11 @@
 
   <section id="agenda">
     <div class="container-fluid text-white">
-      <h2 class="headline-medium">What to expect at this year's event</h2>
+      <h2 class="headline-medium" data-aos="fade-in"
+      data-aos-easing="apple-easing">What to expect at this year's event</h2>
       <div class="row mt-5">
-        <div class="mb-5 col-lg-4 col-sm-6 agenda-container">
+        <div class="mb-5 col-lg-4 col-sm-6 agenda-container" data-aos="fade-in"
+        data-aos-easing="apple-easing">
           <div class="h-100 p-4 border">
             <h4 class="headline-medium">Conference</h4>
             <hr />
@@ -233,7 +257,8 @@
             ></div>
           </div>
         </div>
-        <div class="col-lg-4 col-sm-6 mb-5 agenda-container">
+        <div class="col-lg-4 col-sm-6 mb-5 agenda-container" data-aos="fade-in"
+        data-aos-easing="apple-easing">
           <div class="h-100 p-4 border">
             <h4 class="headline-medium">Tech Playground</h4>
             <hr />
@@ -248,7 +273,8 @@
             ></div>
           </div>
         </div>
-        <div class="col-lg-4 col-sm-6 mb-5 agenda-container">
+        <div class="col-lg-4 col-sm-6 mb-5 agenda-container" data-aos="fade-in"
+        data-aos-easing="apple-easing">
           <div class="h-100 p-4 border">
             <h4 class="headline-medium">Test Drive</h4>
             <hr />
@@ -264,7 +290,8 @@
             ></div>
           </div>
         </div>
-        <div class="col-lg-4 col-sm-6 mb-5 agenda-container">
+        <div class="col-lg-4 col-sm-6 mb-5 agenda-container" data-aos="fade-in"
+        data-aos-easing="apple-easing">
           <div class="h-100 p-4 border">
             <h4 class="headline-medium">Active Matchmaking</h4>
             <hr />
@@ -280,7 +307,8 @@
             ></div>
           </div>
         </div>
-        <div class="col-lg-4 col-sm-6 mb-5 agenda-container">
+        <div class="col-lg-4 col-sm-6 mb-5 agenda-container" data-aos="fade-in"
+        data-aos-easing="apple-easing">
           <div class="h-100 p-4 border">
             <h4 class="headline-medium">Networking & Party</h4>
             <hr />
@@ -295,7 +323,8 @@
             ></div>
           </div>
         </div>
-        <div class="col-lg-4 col-sm-6 mb-5 agenda-container">
+        <div class="col-lg-4 col-sm-6 mb-5 agenda-container" data-aos="fade-in"
+        data-aos-easing="apple-easing">
           <div
             class="h-100 p-4 border d-flex flex-column justify-content-between"
           >
@@ -342,25 +371,32 @@
     <div class="container text-white">
       <div class="row justify-content-around">
         <div class="col-12">
-          <h3 class="text-center mb-5">Sponsors</h3>
+          <h3 class="text-center mb-5" data-aos="fade-in"
+          data-aos-easing="apple-easing">Sponsors</h3>
         </div>
-        <div class="col-md-4 mb-5">
+        <div class="col-md-4 mb-5" data-aos="fade-in"
+        data-aos-easing="apple-easing">
           <img
             src="uploads/global/wms2021/sponsors/pwc_logo.png"
             alt=""
             class="mb-5 mx-auto d-block"
+            data-aos="fade-in"
+            data-aos-easing="apple-easing"
           />
         </div>
       </div>
       <div class="row justify-content-around">
         <div class="col-12">
-          <h3 class="text-center mb-5">Media Partners & Supporters</h3>
+          <h3 class="text-center mb-5" data-aos="fade-in"
+          data-aos-easing="apple-easing">Media Partners & Supporters</h3>
         </div>
         <div class="col-md-4">
           <img
             src="uploads/global/wms2021/sponsors/background_logo.png"
             class="mx-auto d-block"
             alt=""
+            data-aos="fade-in"
+            data-aos-easing="apple-easing"
           />
         </div>
         <div class="col-md-4">
@@ -368,6 +404,8 @@
             src="uploads/global/wms2021/sponsors/automobil_logo.png"
             class="mx-auto d-block"
             alt=""
+            data-aos="fade-in"
+            data-aos-easing="apple-easing"
           />
         </div>
         <div class="col-md-4">
@@ -375,6 +413,8 @@
             src="uploads/global/wms2021/sponsors/next_mobility_logo.png"
             class="mx-auto d-block"
             alt=""
+            data-aos="fade-in"
+            data-aos-easing="apple-easing"
           />
         </div>
         <div class="col-md-4">
@@ -382,6 +422,8 @@
             src="uploads/global/wms2021/sponsors/intellicarde_logo.png"
             class="mx-auto d-block"
             alt=""
+            data-aos="fade-in"
+            data-aos-easing="apple-easing"
           />
         </div>
       </div>
@@ -429,12 +471,14 @@
     <div class="container">
       <div class="row text-white mb-5 description">
         <div class="col-md-6">
-          <h2 class="headline-medium">
+          <h2 class="headline-medium" data-aos="fade-in"
+          data-aos-easing="apple-easing">
             WMS’19 caught <br />
             global attention
           </h2>
         </div>
-        <div class="col-md-6">
+        <div class="col-md-6" data-aos="fade-in"
+        data-aos-easing="apple-easing">
           <h4 class="headline-small">120+</h4>
           <p class="mb-4">Accounts live-tweeting about the event</p>
           <h4 class="headline-small">420k</h4>
@@ -448,12 +492,16 @@
             data-srcset="/uploads/global/wms2021/wms19/car@2x.png 2x"
             alt=""
             class="w-100"
+            data-aos="fade-in"
+            data-aos-easing="apple-easing"
           />
           <img
             data-src="/uploads/global/wms2021/wms19/crowd.png"
             data-srcset="/uploads/global/wms2021/wms19/crowd@2x.png 2x"
             alt=""
             class="w-100"
+            data-aos="fade-in"
+            data-aos-easing="apple-easing"
           />
         </div>
         <div class="col-md-3">
@@ -462,12 +510,16 @@
             data-srcset="/uploads/global/wms2021/wms19/buggy@2x.png 2x"
             alt=""
             class="w-100"
+            data-aos="fade-in"
+            data-aos-easing="apple-easing"
           />
           <img
             data-src="/uploads/global/wms2021/wms19/dj.png"
             data-srcset="/uploads/global/wms2021/wms19/dj@2x.png 2x"
             alt=""
             class="w-100"
+            data-aos="fade-in"
+            data-aos-easing="apple-easing"
           />
         </div>
         <div class="col-md-6">
@@ -476,35 +528,44 @@
             data-srcset="/uploads/global/wms2021/wms19/forum@2x.png 2x"
             alt=""
             class="w-100"
+            data-aos="fade-in"
+            data-aos-easing="apple-easing"
           />
           <img
             data-src="/uploads/global/wms2021/wms19/mixer.png"
             data-srcset="/uploads/global/wms2021/wms19/mixer@2x.png 2x"
             alt=""
             class="w-100"
+            data-aos="fade-in"
+            data-aos-easing="apple-easing"
           />
         </div>
       </div>
       <div class="row mt-5 text-white">
         <div class="col-12">
-          <h2 class="headline-medium text-center">Highlights of WMS'19</h2>
+          <h2 class="headline-medium text-center" data-aos="fade-in"
+          data-aos-easing="apple-easing">Highlights of WMS'19</h2>
         </div>
       </div>
       <div class="row mb-5 py-5 border-bottom text-white text-center">
-        <div class="col-md-3 col-6 mb-5">
+        <div class="col-md-3 col-6 mb-5" data-aos="fade-in"
+        data-aos-easing="apple-easing">
           <h4 class="headline-medium mb-2">46%</h4>
           <p>C-Level</p>
         </div>
         <div class="col-md-3 col-6">
-          <h4 class="headline-medium mb-2">25%</h4>
+          <h4 class="headline-medium mb-2" data-aos="fade-in"
+          data-aos-easing="apple-easing">25%</h4>
           <p>Startup Founders</p>
         </div>
         <div class="col-md-3 col-6">
-          <h4 class="headline-medium mb-2">7%</h4>
+          <h4 class="headline-medium mb-2" data-aos="fade-in"
+          data-aos-easing="apple-easing">7%</h4>
           <p>Investors</p>
         </div>
         <div class="col-md-3 col-6">
-          <h4 class="headline-medium mb-2">22%</h4>
+          <h4 class="headline-medium mb-2" data-aos="fade-in"
+          data-aos-easing="apple-easing">22%</h4>
           <p>Mobility Experts</p>
         </div>
       </div>
@@ -515,12 +576,15 @@
             data-srcset="/uploads/global/wms2021/attendees@2x.png 2x"
             alt=""
             class="w-100"
+            data-aos="fade-in"
+            data-aos-easing="apple-easing"
           />
         </div>
       </div>
       <div class="row">
         <div class="col-12 text-white text-center">
-          <p>
+          <p data-aos="fade-in"
+          data-aos-easing="apple-easing">
             Mobility Startups · Policy Makers · OEMs · Public Transport · Mobile
             & Telecommunications · Tier 1 Suppliers · Tech Companies · Utility
             Providers · Consultancies · Insurance Companies
@@ -533,7 +597,8 @@
     <div class="container text-white">
       <div class="row">
         <div class="col-12">
-          <h2 class="headline-medium text-center">
+          <h2 class="headline-medium text-center" data-aos="fade-in"
+          data-aos-easing="apple-easing">
             Frequently Asked Questions WMS'21
           </h2>
         </div>
@@ -541,7 +606,8 @@
       <div class="row">
         <div class="col-12">
           {% for faq in page.faqs %}
-          <div id="accordion">
+          <div id="accordion" data-aos="fade-in"
+          data-aos-easing="apple-easing">
             <div class="card">
               <div class="card-header" id="heading{{ forloop.index }}">
                 <h5 class="mb-0">
