minor copy edits

--- a/_includes/static/block-vehicles-main.html
+++ b/_includes/static/block-vehicles-main.html
@@ -100,8 +100,8 @@
         </picture>
       </div>
       <div class="col-md-10 offset-md-1 col-lg-8 offset-lg-2">
-        <h3 class="headline-large mb-4 vehicles-financial" data-aos="fade-in" data-aos-easing="apple-easing" >Wunder Capital</h3>
-        <p class="mb-5">Wunder Capital can help you turn your dream fleet into a reality. Flexible financing options and consulting services are available to help you achieve your goals. Pay in installments and get support when you need it so we can make your ride a little smoother.</p>
+        <h3 class="headline-large mb-4 vehicles-financial" data-aos="fade-in" data-aos-easing="apple-easing" >Wunder Mobility Capital</h3>
+        <p class="mb-5">Wunder Mobility Capital can help you turn your dream fleet into a reality. Flexible financing options and consulting services are available to help you achieve your goals. Pay in installments and get support when you need it so we can make your ride a little smoother.</p>
         <a href="#section-contact" class="btn btn-outline-dark mb-5" data-aos="fade-in" data-aos-easing="apple-easing" data-aos-anchor=".rent-getstarted">Learn more</a>
       </div>
     </div>
