--- a/_includes/static/de/block-aboutus-main.html
+++ b/_includes/static/de/block-aboutus-main.html
@@ -25,8 +25,8 @@
                 />
               </svg>
               <h2 class="headline-medium">
-                Wir sind überzeugt, dass uns die Neue Mobilität auf in eine
-                bessere Zukunft führen wird.
+                Wir sind überzeugt, dass uns die Neue Mobilität in eine bessere
+                Zukunft führen wird.
               </h2>
               <footer>
                 <p class="small-label">
@@ -135,10 +135,23 @@
             </div>
           </div>
           <div
-            class="col-10 offset-1 col-md-6 offset-md-0 col-lg-5 offset-lg-1 offset-xl-1 align-self-md-center align-self-lg-start"
+            class="
+              col-10
+              offset-1
+              col-md-6
+              offset-md-0
+              col-lg-5
+              offset-lg-1 offset-xl-1
+              align-self-md-center align-self-lg-start
+            "
           >
             <div
-              class="timeline__image-content d-flex flex-column align-items-start"
+              class="
+                timeline__image-content
+                d-flex
+                flex-column
+                align-items-start
+              "
             >
               <img
                 class="timeline__main-image rellax"
@@ -203,10 +216,23 @@
             </div>
           </div>
           <div
-            class="col-10 offset-1 col-md-6 offset-md-0 col-lg-5 offset-lg-1 offset-xl-1 align-self-md-center align-self-lg-start"
+            class="
+              col-10
+              offset-1
+              col-md-6
+              offset-md-0
+              col-lg-5
+              offset-lg-1 offset-xl-1
+              align-self-md-center align-self-lg-start
+            "
           >
             <div
-              class="timeline__image-content d-flex flex-column align-items-start"
+              class="
+                timeline__image-content
+                d-flex
+                flex-column
+                align-items-start
+              "
             >
               <img
                 class="timeline__main-image rellax"
@@ -284,10 +310,23 @@
             </div>
           </div>
           <div
-            class="col-10 offset-1 col-md-6 offset-md-0 col-lg-5 offset-lg-1 offset-xl-1 align-self-md-center align-self-lg-start"
+            class="
+              col-10
+              offset-1
+              col-md-6
+              offset-md-0
+              col-lg-5
+              offset-lg-1 offset-xl-1
+              align-self-md-center align-self-lg-start
+            "
           >
             <div
-              class="timeline__image-content d-flex flex-column align-items-start"
+              class="
+                timeline__image-content
+                d-flex
+                flex-column
+                align-items-start
+              "
             >
               <img
                 class="timeline__main-image rellax"
@@ -345,10 +384,23 @@
             </div>
           </div>
           <div
-            class="col-10 offset-1 col-md-6 offset-md-0 col-lg-5 offset-lg-1 offset-xl-1 align-self-md-center align-self-lg-start"
+            class="
+              col-10
+              offset-1
+              col-md-6
+              offset-md-0
+              col-lg-5
+              offset-lg-1 offset-xl-1
+              align-self-md-center align-self-lg-start
+            "
           >
             <div
-              class="timeline__image-content d-flex flex-column align-items-start"
+              class="
+                timeline__image-content
+                d-flex
+                flex-column
+                align-items-start
+              "
             >
               <img
                 class="timeline__main-image mw-100 rellax"
