--- a/_includes/static/block-summit-main.html
+++ b/_includes/static/block-summit-main.html
@@ -1,6 +1,6 @@
 <main id="wms2021-main">
   <section id="apply" class="bg-black fixed-bottom m-0">
-    <div class="container-fluid px-5 py-3">
+    <div class="container-fluid px-4 py-3">
       <div class="row align-items-center justify-content-between">
         <p class="mr-2 mb-0">Apply for exclusive WMS'21 tickets</p>
         <button
@@ -14,7 +14,7 @@
     </div>
   </section>
   <section id="countdown" class="bg-black sticky-top">
-    <div class="container-fluid px-5">
+    <div class="container-fluid px-4">
       <div class="row align-items-center">
         <div class="col-md-4 timer-container">
           <div id="timer"></div>
@@ -43,16 +43,34 @@
       </div>
     </div>
   </section>
-  <section id="intro-video">
-    <div class="container">
+  <section id="intro-video" class="mt-0">
+    <div class="container-fluid px-0">
       <div class="row">
-        <div class="col justify-content-center">
-          <a href="#dates" class="d-block mx-auto"
-            ><img
-              src="/uploads/global/wms2021/arrow-down.svg"
-              alt=""
-              class="mx-auto d-block"
-          /></a>
+        <div class="col-12">
+          <div class="plyr__video-embed" id="player">
+            <iframe
+              class="lazy"
+              src="https://player.vimeo.com/video/555575866?background=1&title=0&byline=0&portrait=0&autoplay=1&muted=1"
+              frameborder="0"
+              webkitallowfullscreen
+              mozallowfullscreen
+              allowfullscreen
+              allow="autoplay"
+              muted
+              volume="0"
+            ></iframe>
+          </div>
+        </div>
+        </div>
+        <div class="row mt-5 pt-5">
+          <div class="col justify-content-center">
+            <a href="#dates" class="d-block mx-auto"
+              ><img
+                src="/uploads/global/wms2021/arrow-down.svg"
+                alt=""
+                class="mx-auto d-block"
+            /></a>
+          </div>
         </div>
       </div>
     </div>
@@ -120,21 +138,25 @@
       data-aos-easing="apple-easing">Our 2021 Panelists & Speakers</h2>
       <div class="row">
         {% for speaker in page.speakers %}
-        <div class="col-md-3 col-sm-6 pb-3" data-aos="fade-in"
-        data-aos-easing="apple-easing">
-          <div class="speaker-container p-3 h-100">
-            <div class="d-flex flex-column">
-              <p class="headline-small font-weight-bold">{{ speaker.name }}</p>
-              <hr />
-              <p class="mb-0">{{ speaker.job_title }}</p>
-              <p class="mt-0 mb-4">{{ speaker.company }}</p>
-              <div
-                class="speaker-image"
-                style="background-image: url('{{ speaker.speaker_photo | relative_url }}');"
-              ></div>
+          {% if forloop.length <= 12 %}
+            {% include block-wms-2021-speaker.html %}
+          {% else %}
+            {% if forloop.index <= 12 %}
+              {% include block-wms-2021-speaker.html %}
+            {% endif %}
+            {% if forloop.index == 13 %}
+              <div class="col-12 my-3">
+                <button class="btn btn-outline-light mx-auto d-block" data-target="#more-speakers" data-toggle="collapse">Discover more speakers</button>
+              </div>
+              <div class="collapse w-100 mt-3" id="more-speakers">
+            {% endif %}
+            {% if forloop.index >= 13 %}
+              {% include block-wms-2021-speaker.html %}
+            {% if forloop.last %}
             </div>
-          </div>
-        </div>
+            {% endif %}
+            {% endif %}
+          {% endif %}
         {% endfor %}
       </div>
     </div>
@@ -371,61 +393,40 @@
     <div class="container text-white">
       <div class="row justify-content-around">
         <div class="col-12">
-          <h3 class="text-center mb-5" data-aos="fade-in"
+          <h3 class="text-center headline-medium mb-5" data-aos="fade-in"
           data-aos-easing="apple-easing">Sponsors</h3>
         </div>
+        {% for sponsor in page.sponsors %}
         <div class="col-md-4 mb-5" data-aos="fade-in"
         data-aos-easing="apple-easing">
+          <a href="{{ sponsor.url}}" target="_blank">
           <img
-            src="uploads/global/wms2021/sponsors/pwc_logo.png"
+            src="{{ sponsor.logo }}"
             alt=""
             class="mb-5 mx-auto d-block"
             data-aos="fade-in"
             data-aos-easing="apple-easing"
           />
+        </a>
         </div>
+        {% endfor %}
       </div>
       <div class="row justify-content-around">
         <div class="col-12">
-          <h3 class="text-center mb-5" data-aos="fade-in"
+          <h3 class="headline-medium text-center mb-5" data-aos="fade-in"
           data-aos-easing="apple-easing">Media Partners & Supporters</h3>
         </div>
+        {% for media_partner in page.media_partners %}
         <div class="col-md-4">
           <img
-            src="uploads/global/wms2021/sponsors/background_logo.png"
+            src="{{ media_partner.logo }}"
             class="mx-auto d-block"
             alt=""
             data-aos="fade-in"
             data-aos-easing="apple-easing"
           />
         </div>
-        <div class="col-md-4">
-          <img
-            src="uploads/global/wms2021/sponsors/automobil_logo.png"
-            class="mx-auto d-block"
-            alt=""
-            data-aos="fade-in"
-            data-aos-easing="apple-easing"
-          />
-        </div>
-        <div class="col-md-4">
-          <img
-            src="uploads/global/wms2021/sponsors/next_mobility_logo.png"
-            class="mx-auto d-block"
-            alt=""
-            data-aos="fade-in"
-            data-aos-easing="apple-easing"
-          />
-        </div>
-        <div class="col-md-4">
-          <img
-            src="uploads/global/wms2021/sponsors/intellicarde_logo.png"
-            class="mx-auto d-block"
-            alt=""
-            data-aos="fade-in"
-            data-aos-easing="apple-easing"
-          />
-        </div>
+        {% endfor %}
       </div>
     </div>
   </section>
@@ -641,7 +642,7 @@
                 aria-labelledby="heading{{ forloop.index }}"
                 data-parent="#accordion"
               >
-                <div class="card-body">{{ faq.answer }}</div>
+                <div class="card-body mb-3">{{ faq.answer }}</div>
               </div>
             </div>
           </div>
